added body parser.  gets text and input selected and returns json data on client side after passing thru server

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </select>
 
 
-Food:<input ng-model="text"> <button ng-click="clicked()">TEST</button><br/>
+Food:<input ng-model="text" id="toTranslate" name="toTranslate"> <button ng-click="clicked()">TEST</button><br/>
 Translation:
 {{text}}
 
