--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 Food:<input ng-model="text" id="toTranslate" name="toTranslate"> <button ng-click="clicked()">TEST</button><br/>
 Translation:
 {{text}}
+<span id="translatedText"></span>
 
 
 <span ng-model="translated"></span>
@@ -28,6 +29,8 @@ Translation:
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<script src="js/script.js"></script>
+<script src="js/socket.io.js"></script>
+<script src="js/socket.js"></script>
+
 <script src="js/controller.js"></script>
 </html>
