--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">    
 
     <style>
-    	#recommended {
+    	#recommended, #translateDiv, header {
     		text-align: center;
     	}
 
@@ -31,14 +31,20 @@
 </head>
 <body ng-app="app" ng-controller="dataController">
 
-<h1>Travel Buddy</h1>
+<header>
+	<h1>Travel Buddy</h1>
 
-<h2>Choose Country</h2>
-<select ng-model="target" ng-options="x for (x, y) in targetLanguages">
-</select>
+	<h2>Choose Language</h2>
+	<select ng-model="target" ng-options="x for (x, y) in targetLanguages">
+	</select>
+</header><br/><br/>
 
 
 <section id="recommended">
+
+<div class="col-md-6">
+	<span class="question">What's your name?</span> <br/>
+	<span class="trans">{{target.q5}}</span><br/><br/>
 
 	<span class="question">What is good food?</span> <br/>
 	<span class="trans">{{target.q1}}</span><br/><br/>
@@ -47,15 +53,33 @@
 	<span class="trans">{{target.q2}}</span><br/><br/>
 
 	<span class="question">	Where is the closest hotel?</span> <br/>
-	<span class="trans">{{target.q3}}</span>
+	<span class="trans">{{target.q3}}</span><br/><br/>
+</div>
+<div class="col-md-6">
+
+	<span class="question">Where is the closest train station?</span> <br/>
+	<span class="trans">{{target.q4}}</span><br/><br/>
+
+	<span class="question">How far?</span> <br/>
+	<span class="trans">{{target.q6}}</span><br/><br/>
+
+
+	<span class="question">How much?</span> <br/>
+	<span class="trans">{{target.q7}}</span><br/><br/>
+</div>
 
 </section>
 
+<section id="translateDiv">
 
-<h3>Translate Text</h3>
-Text:<input ng-model="text" id="toTranslate" name="toTranslate"> <button ng-click="translate()">Translate</button><br/>
-Translation:
-<span class="trans" id="translatedText"></span>
+	<h3>Translate Text</h3>
+	<input ng-model="text" id="toTranslate" name="toTranslate"> <button ng-click="translate()">Translate</button><br/>
+	Translation:
+	<span class="trans" id="translatedText"></span><br/>
+
+</section>
+
+<button ng-click="tts()">TTS</button>
 
 
 <span ng-model="translated"></span>
