--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <section id="translateDiv">
 
-	<h3>Translate Text</h3>
+	<h3>Translate Custom Text</h3>
 	<input ng-model="text" id="toTranslate" name="toTranslate"> <button ng-click="translate()">Translate</button><br/>
 	Translation:
 	<span class="trans" id="translatedText"></span><br/>
