FINALLY GOT SOUND TO PLAY

--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
 	Translation:
 	<span class="trans" id="translatedText"></span><br/>
 
+	<span class="trans" id="mp3"></span><br/>
+	
 </section>
 
 <button ng-click="tts()">TTS</button>
+<button id="play">Play</button>
 
 
 <span ng-model="translated"></span>
