added dynamic text-to-speech.  added spanish

--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
 	<span class="trans" id="translatedText"></span><br/>
 
 	<span class="trans" id="mp3"></span><br/>
-	
+
+	Text-To-Speech	
+	<input ng-model="ttsText" id="ttsText" name="ttsText"> <button ng-click="tts()">Generate Text-To-Speech Sound</button><br/>
 </section>
 
-<button ng-click="tts()">TTS</button>
+
 <button id="play">Play</button>
 
 
